dev: Allow multiple selection in the staged list view.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -281,7 +281,7 @@
                                   AllowDrop="True"
                                   Drop="OnDropIntoStagedPhotos"
                                   DragOver="OnDragOverStagedPhotos"
-                                  SelectionMode="Single"
+                                  SelectionMode="Extended"
                                   SelectionChanged="OnStagedPhotosSelectionChanged"
                                   Background="{StaticResource PrimaryColor}">
                             <ListView.ItemContainerStyle>
