--- a/windows/PhotobookUI/Dashboard.xaml
+++ b/windows/PhotobookUI/Dashboard.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Page x:Class="PhotobookUI.FirstPage"
+<Page x:Class="PhotobookUI.Dashboard"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:PhotobookUI"
@@ -22,16 +22,17 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Grid.Row="0"
-                    Grid.Column="0"
-                    x:Name="addProjectButton"
-                    Click="AddProjectClicked"
-                    Background="{StaticResource ButtonBackgroundColor}"
-                    Foreground="#FFFFFF"
-                    Width="100"
-                    Height="100"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Center">+</Button>
+            <Grid Grid.Row="0"
+                  Grid.Column="0"
+                  Margin="0,0,10,0">
+                <Button Click="AddProjectClicked"
+                        Background="{StaticResource ButtonBackgroundColor}"
+                        Foreground="{StaticResource MainFontColor}"
+                        Width="100"
+                        Height="100"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Center">+</Button>
+            </Grid>
             <GridView Grid.Row="0"
                       Grid.Column="1"
                       x:Name="ProjectsListView"
@@ -45,18 +46,18 @@
                         <Grid Width="100"
                               Height="100"
                               Background="{StaticResource ButtonBackgroundColor}"
-                              Margin="2, 2, 2, 2">
+                              Margin="2,15, 2, 2">
                             <TextBlock HorizontalAlignment="Center"
                                        VerticalAlignment="Center"
                                        Text="{x:Bind Name}"
-                                       Foreground="#FFFFFF"
+                                       Foreground="{StaticResource MainFontColor}"
                                        TextWrapping="Wrap"></TextBlock>
                         </Grid>
                     </DataTemplate>
                 </GridView.ItemTemplate>
                 <GridView.ItemsPanel>
-                    <ItemsPanelTemplate >
-                        <ItemsWrapGrid MaximumRowsOrColumns="10" />
+                    <ItemsPanelTemplate>
+                        <ItemsWrapGrid MaximumRowsOrColumns="1" />
                     </ItemsPanelTemplate>
                 </GridView.ItemsPanel>
             </GridView>
