ui: Add unstaged list view Ctrl+A.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -367,6 +367,11 @@
                               CanReorderItems="False"
                               Tapped="OnClickedOutsideList"
                               DragItemsStarting="OnUnstagedPhotosDragStarted">
+                        <ListView.KeyboardAccelerators>
+                            <KeyboardAccelerator Modifiers="Control"
+                                                 Key="A"
+                                                 Invoked="UnstagedSelectAllInvoked" />
+                        </ListView.KeyboardAccelerators>
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
                                 <Setter Property="Template">
