dev: Add import media menu bar button.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -80,6 +80,8 @@
                                 <MenuFlyoutItem Text="Save As"
                                                 Click="OnSaveAsClicked" />
                                 <MenuFlyoutSeparator />
+                                <MenuFlyoutItem Text="Import Media"
+                                                Click="OnImportFolderAdded" />
                                 <MenuFlyoutItem Text="Export"
                                                 Click="OnExportClicked" />
                                 <MenuFlyoutSeparator />
