--- a/windows/PhotobookUI/ColorScheme.xaml
+++ b/windows/PhotobookUI/ColorScheme.xaml
@@ -7,6 +7,7 @@
     <Color x:Key="ButtonBackgroundColor">#374346</Color>
     <Color x:Key="MainFontColor">#FFFFFF</Color>
     <Color x:Key="ButtonPointerOverWhenSelected">#516165</Color>
+    <Color x:Key="RemoveButtonBackground">#541C1C</Color>
     <SolidColorBrush x:Key="ButtonBackgroundDisabled"
                      Color="#00000000" />
 </ResourceDictionary>
