--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -45,6 +45,7 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Button Background="{StaticResource PrimaryColor}"
                         Click="OnBackClicked"
@@ -136,11 +137,31 @@
                         </MenuFlyout>
                     </Button.Flyout>
                 </Button>
-                <Button  Content="Help"
+                <Button  Content="Options"
                          Foreground="{StaticResource MainFontColor}"
                          Background="{StaticResource PrimaryColor}"
                          CornerRadius="0"
                          Grid.Column="3">
+                    <Button.Flyout>
+                        <MenuFlyout>
+                            <MenuFlyout.MenuFlyoutPresenterStyle>
+                                <Style TargetType="MenuFlyoutPresenter">
+                                    <Setter Property="CornerRadius"
+                                            Value="0" />
+                                </Style>
+                            </MenuFlyout.MenuFlyoutPresenterStyle>
+                            <MenuFlyout.Items>
+                                <MenuFlyoutItem Text="Preferences"
+                                                Click="OnPreferencesClicked" />
+                            </MenuFlyout.Items>
+                        </MenuFlyout>
+                    </Button.Flyout>
+                </Button>
+                <Button  Content="Help"
+                         Foreground="{StaticResource MainFontColor}"
+                         Background="{StaticResource PrimaryColor}"
+                         CornerRadius="0"
+                         Grid.Column="4">
                     <Button.Flyout>
                         <MenuFlyout>
                             <MenuFlyout.MenuFlyoutPresenterStyle>
