ui: Add Tips button.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -171,6 +171,9 @@
                                 </Style>
                             </MenuFlyout.MenuFlyoutPresenterStyle>
                             <MenuFlyout.Items>
+                                <MenuFlyoutItem Text="Tips"
+                                                Click="OnTipsClicked" />
+                                <MenuFlyoutSeparator />
                                 <MenuFlyoutItem Text="License"
                                                 Click="OnLicenseClicked" />
                                 <MenuFlyoutItem Text="About"
