ui: DIsable vertical scroll on the photo lines.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -341,6 +341,7 @@
                                   ScrollViewer.HorizontalScrollMode="Enabled"
                                   ScrollViewer.HorizontalScrollBarVisibility="Visible"
                                   ScrollViewer.IsHorizontalRailEnabled="True"
+                                  ScrollViewer.VerticalScrollMode="Disabled"
                                   CanDragItems="True"
                                   CanReorderItems="True"
                                   IsSwipeEnabled="True"
@@ -416,6 +417,7 @@
                               ScrollViewer.HorizontalScrollMode="Enabled"
                               ScrollViewer.HorizontalScrollBarVisibility="Visible"
                               ScrollViewer.IsHorizontalRailEnabled="True"
+                              ScrollViewer.VerticalScrollMode="Disabled"
                               SelectionMode="Extended"
                               SelectionChanged="OnUnstagedPhotosSelectionChanged"
                               HorizontalAlignment="Stretch"
